
 - TODO add mimic curse
 - TODO add lairs
 - TODO add chains
 - TODO display stand turret
 - TODO added personalized dragon caves
 - TODO dragon arena floor 20


TODO:
- High alchemist and solvent
- Let go of leash thru menu
- Aggro level

TODO remove hogtie when released
TODO Add Cuddle play type

5.4.14
- Highsec prisons are now persistent
- Shrines dont remove favorited restraints

5.4.13
- Added Essence Necklace
- Made yokes and fiddles more common in the enchanted restraints loot table
- Added Mana Burst back as an upgrade

5.4.12
- Replaced Trainee's Mana Burst with Essence Motes (active spell)
- Reworked Trainee's Desire Burst to use motes
- New Trainee spells: Conjure Essence Mote, Shock Collar, Psychic Link
- Removed Mental Fortitude for now

5.4.11
- Reworked Mental Fortitude. Added Mental Defiance
- Changed all "ChangeX" stat change functions to have an src field
- Added mod compat setting for above, changed names of functions

5.4.10
- Defeating enemies now restores WP
- Vengeance now gives 10% of the DP from before
- Limit surge is now 40 WP instead of 50


5.4.9
- Added wait speed options
- Made settings for toggles appear after hovering over the buttons for a bit
- Mental Resistance now always works if you are shielded
- Removed Second Wind from the perk selection
- New Trainee upgrade: "Mental Fortitude: While WP >75%, regenerate to full"


5.4.7 & 5.4.8
- Lots of small bugfixes

5.4.6
- Clear restraints from outfit when loading into wardrobe from title screen
- Fix save game code missing in non roguelike mode
- Changed layer of pantyhose to go under socks/stockings

5.4.5
- Show owned items in NPC shop interface
- Add option to untie NPC

5.4.4
- Universal solvent now rescues Encased Adventurers (if you choose to use it for such)
- Universal solvent now removes encased debuffs from NPCs and grants glue resist to NPC/player for 30 turns
- Being hit by an Observer's beam now attracts the Shadow to your position