@@ -168,6 +168,7 @@ let KDGuardActions: Record<string, guardActionEntry> = {
 					guard.gy = KinkyDungeonPlayerEntity.y;
 			}
 			KDGameData.GuardApplyTime = 0;
+			KinkyDungeonSetEnemyFlag(guard, "wander", 10);
 		},
 	},
 	"release": {
